Remove of unused Inports and explicit Type arguments wich were redundent